fix: gap between elements in Services

--- a/src/components/Services/Hero/Hero.module.scss
+++ b/src/components/Services/Hero/Hero.module.scss
@@ -9,8 +9,12 @@
   justify-content: space-between;
   align-items: flex-start;
 
+  @screen tablet {
+    padding: 6rem 0;
+  }
+
   @screen desktop_md {
-    padding: 10rem 0;
+    padding: 8rem 0;
   }
 
   .hgroup {
@@ -19,7 +23,14 @@
     flex-direction: column;
     gap: 1rem;
     z-index: 1;
-    max-width: 60%;
+
+    @screen tablet {
+      max-width: 75%;
+    }
+
+    @screen desktop_md {
+      max-width: 60%;
+    }
   }
 
   .bulbImage {
@@ -30,6 +41,7 @@
     @include hero_height;
 
     width: 100vw !important;
+    height: 100vh !important;
     position: absolute;
     top: 0;
     z-index: 0;
@@ -40,11 +52,12 @@
     }
 
     @screen desktop_md {
-      margin: 0 (-$body-margin-desktop-md);
+      margin: -2rem (-$body-margin-desktop-md);
     }
 
     @screen desktop_lg {
       margin: 0 (-$body-margin-desktop-lg);
+      margin-top: -6rem;
     }
 
     @screen desktop_xl {
